--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -52,7 +52,7 @@
 @article{Dempster:1977,
   title     = {Maximum likelihood from incomplete data via the EM algorithm},
   author    = {Dempster, A. P. and Laird, N. M. and Rubin, D. B.},
-  journal   = {Journal of the royal statistical society: series B (methodological)},
+  journal   = {Journal of the Royal Statistical Society: Series B},
   volume    = {39},
   number    = {1},
   pages     = {1--22},
@@ -84,12 +84,12 @@
 @article{Lihn:2017,
  	author  = {Lihn, S. H.},
 	journal = {ERN: Asset Pricing Models (Topic)},
-	title   = {Hidden Markov Model for Financial Time Series and its Application to S\&P 500 Index},
+	title   = {Hidden Markov Model for Financial Time Series and its Application to {S}\&{P} 500 Index},
  	year    = {2017}
 }
 
 @Article{Michelot:2016,
-  title = {moveHMM: an R package for the statistical modelling of animal movement data using hidden Markov models},
+  title = {moveHMM: an {R} package for the statistical modelling of animal movement data using hidden Markov models},
   author = {Michelot, T. and Langrock, R. and Patterson, T. A.},
   journal = {Methods in Ecology and Evolution},
   year = {2016},
