--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -180,7 +180,7 @@
 }
 
 @book{Wickham:2019,
-  title     = {Advanced R},
+  title     = {Advanced {R}},
   author    = {Wickham, H.},
   year      = {2019},
   publisher = {CRC press},
