--- a/vignettes/example_hmm.Rmd
+++ b/vignettes/example_hmm.Rmd
@@ -18,18 +18,18 @@ knitr::opts_chunk$set(
   fig.align = "center",
   fig.dim = c(8, 6), 
   out.width = "75%",
+  # all optimizations are pre-computed and loaded below to save building time
   eval = FALSE
 )
 library("ino")
-set.seed(1)
 data("hmm_ino")
 ```
 
-This vignette^[The vignette was build using R `r paste(R.Version()[c("major","minor")], collapse = ".")` with the {ino} `r utils::packageVersion("ino")` package.] describes the workflow of the {ino} package for the likelihood optimization of a hidden Markov model (HMM). For more technical details about HMMs see, e.g., @Zucchini:2016.
+In this vignette^[The vignette was build using R `r paste(R.Version()[c("major","minor")], collapse = ".")` with the {ino} `r utils::packageVersion("ino")` package.] we describe the workflow of the {ino} package for fitting a hidden Markov model (HMM) through likelihood optimization. HMMs are statistical models used to explain systems that can only be observed indirectly through a sequence of outputs, and have unobservable hidden states. They consist of two processes, a Markov process that describes the hidden states, and an observable process that describes the outputs produced by the system, where the probability of observing an output at a given time depends only on the current state. State-switching models like HMMs are commonly used in speech recognition, animal movement modeling, bioinformatics, and finance. For more technical details about HMMs and their scope of application, see, e.g., @Zucchini:2016.
 
-## Data
+## Application to financial data
 
-The example data set considered throughout this vignette covers a time series of log returns from the German stock index DAX over 30 years. The data set is freely accessible via Yahoo Finance and can be downloaded via the `download_data()` function from the {fHMM} package [@Oelschläger:2023b]: 
+The example data set considered throughout this vignette covers a time series of log returns from the [German stock index DAX](https://en.wikipedia.org/wiki/DAX) over 30 years. The DAX closing prices are freely accessible via Yahoo Finance and can be downloaded via the `download_data()` function from the {fHMM} package [@Oelschläger:2023b]. They can easily be transformed to log returns using the {dplyr} package [@Wickham:2023]:
 
 ```{r, download dax data, message = FALSE, warning = FALSE, eval = TRUE}
 library("fHMM")
@@ -55,17 +55,17 @@ ggplot(dax, aes(x = date, y = logreturn)) +
   scale_y_continuous(labels = scales::label_percent())
 ```
 
-As the log returns are continuous and can take both negative and positive values, we consider an HMM with Gaussian state-dependent distributions --- note that some applications instead use t- or symmetric lambda distributions to also model the kurtosis [@Oelschläger:2021].
+As the log returns are continuous and can take both negative and positive values, we consider an HMM with Gaussian state-dependent distributions --- note that some applications instead use symmetric lambda or t-distributions to also model the kurtosis [@Lihn:2017; @Oelschläger:2021].
 
 ## Likelihood optimization
 
 We consider a 2-state (`N = 2`) Gaussian-HMM here to model bearish and bullish market periods. This results in six parameters (`npar = 6`) to be estimated:
 
-- two for the transition probability matrix (t.p.m.),
+- two identified parameters for the transition probability matrix (t.p.m.),
 - two for the means of the state-dependent distributions,
 - two for the standard deviations of the state-dependent distributions.
 
-The likelihood for a Gaussian-HMM is given by the function `f_ll_hmm()` provided by the {ino} package. The argument `neg = TRUE` indicates that we minimize the negative log-likelihood, and `set_optimizer(optimizer_nlm())` selects the optimizer `stats::nlm()` (see the introductory vignette).
+The likelihood for a Gaussian-HMM is given by the function `f_ll_hmm()` provided by the {ino} package. The argument `neg = TRUE` indicates that we minimize the negative log-likelihood, and `set_optimizer(optimizer_nlm())` selects the optimizer `stats::nlm()` (see the introductory vignette for more details on how to specify optimizers).
 
 ```{r, define ino object}
 hmm_ino <- Nop$new(
@@ -80,9 +80,13 @@ set_optimizer(optimizer_nlm())
 
 ### Random initialization
 
-We first use randomly chosen starting values. As the first two starting values belong to the t.p.m., we draw starting values from a $\mathcal{U}(-2,-1)$ distribution --- as we use the multinomial logit link to ensure that the probabilities are between 0 and 1, a value of -1.5 correspond to probabilities of staying in state 1 and 2 of about 0.81. For the two means, we draw two random numbers from the standard normal distribution, as the time series above indicates that the most of the returns are fairly close to zero. The starting values for the standard deviations are drawn from a $\mathcal{U}(0.5,2)$ distribution (note that we exponentiate the standard deviations in the likelihood as they are constrained to be positive, and hence we log-transform the starting values).
+Randomly chosen starting values is a first initialization approach:
 
-The `$optimize()` method with argument `initial = sampler` then performs `runs = 100` optimization runs with starting values drawn from the selected distributions:
+- As the first two starting values belong to the off-diagonal of the t.p.m., we draw starting values from a $\mathcal{U}(-2,-1)$ distribution --- as we use the multinomial logit link to ensure that the probabilities are between 0 and 1, a value of -1.5 correspond to probabilities of staying in state 1 or 2 of about 80\%. 
+- For the two means, we draw two random numbers from the standard normal distribution, as the time series above indicates that the most of the returns are fairly close to zero. 
+- The starting values for the standard deviations are drawn from a $\mathcal{U}(0.5,2)$ distribution (note that we exponentiate the standard deviations in the likelihood as they are constrained to be positive, and hence we log-transform the starting values).
+
+The `$optimize()` method with argument `initial = sampler` then performs `runs = 100` optimization runs with starting values drawn from the specified distributions:
 
 ```{r, random initialization}
 sampler <- function() {
@@ -115,9 +119,9 @@ hmm_ino$optimize(initial = starting_values, label = "educated_guess")
 
 ### Subset initialization
 
-Since we have `r nrow(dax)` share return observations, it might be beneficial to obtain initial values by first fitting the model to a subset of the data. If the data subset is chosen small enough, estimation with the subset will be much faster. On the other hand, if the data subset is chosen large enough to still contain enough information, the estimates on the subset will already lie close to the estimates for the full model.
+Since the data set is large, containing a total of `r nrow(dax)` share return observations, it might be beneficial to obtain initial values by first fitting the model to a data subset. If the data subset is chosen small enough, estimation with the subset will be much faster. On the other hand, if the data subset is chosen large enough to still contain enough information, the estimates on the subset will already lie close to the estimates for the full model.
 
-To illustrate the subset initialization strategy, we consider the first 25\% of the observation using `$reduce()`. The starting values for this subset are drawn from the `sampler()` function considered above. We again use the function `$optimize()` to fit the HMM, but now to the subset. With `$continue()`, we then use the estimates obtained from the subsets as initial values to fit the model to the entire data set.
+To illustrate the subset initialization strategy, we consider the first quarter of observations, which can be extracted using the `$reduce()` method with arguments `how = "first"` and `prop = 0.25`. The starting values for the optimizations on this subset are drawn from the `sampler()` function defined above. We again use `$optimize()` to fit the HMM, but now to the data subset. With `$continue()`, we then use the estimates obtained from the optimization on the subset as initial values to fit the model to the entire data set. The entire data set is restored via `$reset_argument("data")`.^[If we were to skip the `$reset_argument()` step, all future optimization runs would be made on the subset.]
 
 ```{r, subset initialization first}
 hmm_ino$
@@ -126,8 +130,6 @@ hmm_ino$
   reset_argument("data")$
   continue()
 ```
-
-As a final step in the previous code snippet, we use `$reset_argument()` to obtain our actual data set consisting of *all* observations. If we were to skip this step, all future optimization runs would be made on the subset.
 
 For comparison, we also consider the subset obtained from the last 25\% of the observations:
 
@@ -141,7 +143,7 @@ hmm_ino$
 
 ## Standardize initialization
 
-The considered log returns range from `r round(min(dax$logreturn), 2)` to `r round(min(dax$logreturn), 2)`. Optimization might be facilitated by standardizing the data first via the `$standardize()` method:
+The considered log returns range `r paste(c("from", "to"), round(range(dax$logreturn), 1), collapse = " ")`. Optimization might be facilitated by standardizing the data first. This idea can be tested via the `$standardize()` method:
 
 ```{r, standardize initialization}
 hmm_ino$
@@ -154,51 +156,69 @@ Note that we again use `$reset_argument()` to obtain our actual (non-standardize
 
 ## Evaluating the optimization runs
 
-### Local optima
+### Global versus local optima
 
-Selecting the starting values for HMMs is a well-known issue, as poor starting values may likely result in local optima. Other R packages designed to fit HMMs discuss this topic in more detail (see, e.g., @Michelot:2016). We thus first evaluate the optimizations by comparing the likelihood values at convergence, which can be displayed using the `$optima()` method:
+Selecting the starting values for the HMM likelihood optimization is a well-known issue, as poor starting values may likely result in local optima.^[Other R packages designed to fit HMMs discuss this topic in more detail, see, e.g., @Michelot:2016.] We thus first evaluate the optimizations by comparing the likelihood values at convergence, which can be displayed using the `$optima()` method. Here,
+
+- `sort_by = "value"` sorts the table by function value (in decreasing order^[By default, optimization is assumed to involve minimizing the target function. If instead the function is maximized, set `hmm_ino$show_minimum <- FALSE` to reverse the ordering in the `$optima()` output.]),
+- `only_comparable = TRUE` excludes optimization results on the standardized or reduced data set,
+- `digitis = 0` ignores any decimal places.
 
 ```{r, overview of optima, eval = TRUE}
 hmm_ino$optima(sort_by = "value", only_comparable = TRUE, digits = 0)
 ```
 
-The frequency table indicates that `r hmm_ino$optima() %>% arrange(value) %>% slice(1) %>% pull(frequency)` out of `r sum(hmm_ino$optima()$frequency)` runs converged to the smallest (negative) log-likelihood value, which appears to be the global optimum (note these are the negative log-likelihood values). However, in `r hmm_ino$optima() %>% arrange(value) %>% slice(2:nrow(.)) %>% pull(frequency) %>% sum` runs we got stuck in a local optimum.
+```{r, get number of converged runs, include = FALSE, eval = TRUE}
+library("dplyr")
+optima <- hmm_ino$optima(sort_by = "value", only_comparable = TRUE, digits = 0)
+global <- optima %>% arrange(value) %>% slice(1) %>% pull(frequency)
+total <- sum(optima$frequency)
+local <- total - global
+```
 
-Using `summary()`, we can investigate the computation time (`"seconds"`), the resulting optimum (`"value"`) and the corresponding initialization strategy (`"label"`) of all runs (here, only the first ten are shown): 
+The frequency table indicates that `r global` out of `r total` runs converged to the smallest (negative) log-likelihood value, which appears to be the global optimum (note that these are the negative log-likelihood values). However, in `r local` runs we apparantly got stuck in local optima.
+
+Using `summary()`, we now can investigate the optimum values (`"value"`), the corresponding parameter vectors (`"parameter"`), and the optimization times (`"seconds"`) of all runs (here, only the first ten are shown):^[The `$elements_available()` method provides an overview of all available optimization result elements.] 
 
 ```{r, summary of results, eval = TRUE}
-hmm_ino$summary(which_element = c("value", "seconds", "label")) %>% 
+summary(hmm_ino, which_element = c("value", "parameter", "seconds")) %>% 
   head(n = 10)
 ```
 
-The final parameter estimates, i.e., the parameters associated with the global optimum, are stored as `best_parameter()`:
+The final parameter estimates (i.e., the parameters associated with the global optimum) can be accessed via `$best_parameter()` ...
 
 ```{r, best parameter, eval = TRUE}
 hmm_ino$best_parameter()
 ```
 
-and the corresponding likelihood value can be obtained as
+.. and the corresponding likelihood value as:
 
 ```{r, best value, eval = TRUE}
 hmm_ino$best_value()
 ```
 
-
 ### Optimization time
 
-We use the `plot()` function to investigate the computation time. Intuitively, optimization runs based on our educated guesses should be faster than runs with random starting values, since we have carefully chosen these starting values by investigating the data:
+The `plot()` function can be used to investigate the optimization times across initialization strategies (`by = "label"`). Since the absolute times depend  ^[Setting `relative = FALSE` in the `plot()` call shows the absolute times.]  
 
 ```{r, optimization time, eval = TRUE}
 plot(hmm_ino, by = "label")
 ```
 
-Here, relative computation times are shown --- setting `relative = FALSE` in `plot()` gives the absolute times. Using the output provided by `summary()` and some data manipulation functions provided by the package {dplyr}, we can also compute the median computation time per strategy:
+Using the output provided by `summary()` and some data manipulation functions provided by the package {dplyr}, we can also compute point statistics of interest, like the median computation time per strategy:
 
 ```{r, warning = FALSE, message = FALSE, eval = TRUE}
 summary(hmm_ino, c("label", "seconds")) %>% 
   group_by(label) %>% 
-  summarise(avg_time = median(seconds, na.rm = TRUE))
+  summarise(median_seconds = median(seconds, na.rm = TRUE)) %>%
+  arrange(median_seconds)
 ```
+
+We can draw the following conclusions:
+
+- Intuitively, optimization runs based on our educated guesses should be faster than runs with random starting values, since we have carefully chosen these starting values by investigating the data:
+
+### Considering successful runs only
 
 This comparison can however be considered somewhat 'unfair', as not all optimization runs lead to the global optimum --- optimization runs that lead to local optima may have less iterations and hence lower computation time. We can first check which runs lead to the apparent global optimum of `r format(as.numeric(hmm_ino$best_value()), scientific = FALSE)`. For that, we will again use functions from {dplyr}.
 
@@ -217,7 +237,8 @@ Let's again compare the median computation time, but only for those runs that le
 summary(hmm_ino, c("label", "value", "seconds")) %>% 
   filter(value < -22445) %>% 
   group_by(label) %>% 
-  summarise(mean_time = mean(seconds))
+  summarise(mean_time = mean(seconds)) %>%
+  arrange(median_seconds)
 ```
 
 For those runs that converged to the global optimum, we can again compare the computation time via boxplots:
