--- a/vignettes/ref.bib
+++ b/vignettes/ref.bib
@@ -89,7 +89,7 @@
 }
 
 @Article{Michelot:2016,
-  title = {moveHMM: an {R} package for the statistical modelling of animal movement data using hidden Markov models},
+  title = {{moveHMM}: an {R} package for the statistical modelling of animal movement data using hidden Markov models},
   author = {Michelot, T. and Langrock, R. and Patterson, T. A.},
   journal = {Methods in Ecology and Evolution},
   year = {2016},
@@ -185,6 +185,14 @@
   year      = {2019},
   publisher = {CRC press},
   doi       = {10.1201/9781351201315}
+}
+
+@Manual{Wickham:2023,
+  title = {{dplyr}: A Grammar of Data Manipulation},
+  author = {Wickham, H. and François, R. and Henry, L. and Müller, K. and Vaughan, D.},
+  year = {2023},
+  note = {R package version 1.1.0},
+  url = {https://CRAN.R-project.org/package=dplyr},
 }
 
 @book{Zucchini:2016,
