--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# {ino}: Initialization of Numerical Optimization
+# {ino}: Initialization of Numerical Optimization <img src="man/figures/logo.png" align="right" height="139" />
 
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/ino)](https://CRAN.R-project.org/package=ino)
