--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# {ino}: Initialization of Numerical Optimization <img src="man/figures/logo.png" align="right" height="139" />
+# Initialization of Numerical Optimization <img src="man/figures/logo.png" align="right" height="139" />
 
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/ino)](https://CRAN.R-project.org/package=ino)
@@ -21,9 +21,7 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/loelschlaeger/ino/branch/master/graph/badge.svg)](https://app.codecov.io/gh/loelschlaeger/ino?branch=master)
 <!-- badges: end -->
 
-The R-package {ino} provides implementation of several initialization strategies for the numerical optimization of real-valued functions, in particular likelihood functions of statistical models.
-
-Please see the vignettes for a manual and two example applications.
+The {ino} R package implements multiple initialization strategies for numerical optimization of real-valued functions, with a specific focus on likelihood functions of statistical models.
 
 ## Installation
 
