--- a/README.Rmd
+++ b/README.Rmd
@@ -17,11 +17,12 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![CRAN status](https://www.r-pkg.org/badges/version/ino)](https://CRAN.R-project.org/package=ino)
+[![CRAN downloads](https://cranlogs.r-pkg.org/badges/last-month/ino)](https://CRAN.R-project.org/package=ino)
 [![R-CMD-check](https://github.com/loelschlaeger/ino/workflows/R-CMD-check/badge.svg)](https://github.com/loelschlaeger/ino/actions)
 [![Codecov test coverage](https://codecov.io/gh/loelschlaeger/ino/branch/master/graph/badge.svg)](https://app.codecov.io/gh/loelschlaeger/ino?branch=master)
 <!-- badges: end -->
 
-The {ino} R package implements multiple initialization strategies for numerical optimization of real-valued functions, with a specific focus on likelihood functions of statistical models.
+The {ino} R package implements initialization strategies and analysis tools for numerical optimization of real-valued functions, with a specific focus on likelihood functions of statistical models.
 
 ## Installation
 
