--- a/vignettes/example_probit.Rmd
+++ b/vignettes/example_probit.Rmd
@@ -46,26 +46,24 @@ where $1(\cdot)$ denotes the indicator function and $\phi(\cdot)$ the Gaussian d
 
 The {ino} package provides the `sim_mnp()` function for simulating choice data from a probit model. To use this function, we first need to define a function `X()` that samples the matrix of choice characteristics for the decision maker $n$ at choice occasion $t$. The matrix must have the dimension $J \times P$, where $J$ is the number of available alternatives and $P$ the number of characteristics that describe each alternative.
 
-In our simulation, the choice setting consists of $J = 3$ alternatives that are described via $P = 2$ characteristics, and each entry of $X_{nt}$ is drawn from a $\mathcal{N}(\mu = 0, \sigma = 3)$ distribution:
+In our simulation, the choice setting consists of $J = 3$ alternatives that are described via $P = 2$ characteristics. The entries of the first column of $X_{nt}$ are drawn from the $\mathcal{N}(\mu = 10, \sigma = 3)$ distribution, and the entries of the second column from $\mathcal{N}(\mu = 0, \sigma = 0.3)$. This design mimics that choice covariates are usually observed on different scales.
 
 ```{r, choice covariates, eval = TRUE}
-J <- 3
-P <- 2
 X <- function(n, t) {
-  matrix(stats::rnorm(J * P, mean = 0, sd = 3), nrow = J)
+  cbind(stats::rnorm(3, mean = 10, sd = 3), stats::rnorm(3, mean = 0, sd = 0.3))
 }
 X(n = 1, t = 1)
 ```
 
-We simulate choice data for $N = 200$ deciders at $T = 20$ choice occasions from the probit model defined by the parameters $b = \begin{pmatrix} 1 & -1 \end{pmatrix}^\top$, $\Omega = \begin{pmatrix} 1 & 0.5 \\ 0.5 & 1 \end{pmatrix}$, and $\Sigma = \begin{pmatrix} 1 & -0.5 & 0.25 \\ -0.5 & 1 & 0.25 \\ 0.25 & 0.25 & 1 \end{pmatrix}$:
+We simulate choice data for $N = 200$ deciders at $T = 20$ choice occasions from the probit model defined by the parameters $b = \begin{pmatrix} 1 & -10 \end{pmatrix}^\top$, $\Omega = \begin{pmatrix} 0.2 & 0.5 \\ 0.5 & 2 \end{pmatrix}$, and $\Sigma = \begin{pmatrix} 1 & -0.5 & 0.2 \\ -0.5 & 1 & 0.2 \\ 0.2 & 0.2 & 1 \end{pmatrix}$:
 
 ```{r, simulate data, eval = TRUE}
 N <- 200
 T <- 20
-b <- c(1, -1)
-Omega <- matrix(c(1, 0.5, 0.5, 1), 2, 2)
-Sigma <- matrix(c(1, -0.5, 0.25, -0.5, 1, 0.25, 0.25, 0.25, 1), 3, 3)
-probit_data <- sim_mnp(N, T, J, P, b, Omega, Sigma, X, seed = 1)
+b <- c(1, -10)
+Omega <- matrix(c(0.2, 0.5, 0.5, 2), 2, 2)
+Sigma <- matrix(c(1, -0.5, 0.2, -0.5, 1, 0.2, 0.2, 0.2, 1), 3, 3)
+probit_data <- sim_mnp(N, T, J = 3, P = 2, b, Omega, Sigma, X, seed = 1)
 ```
 
 The `probit_data` object is a `data.frame` with the decider index `n`, the choice occasion index `t`, the choice `y`, and the choice characteristics `X`:
